sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__false12/errors.jtrrouter
Error: Attribute 'maxspeed' in definition of lane '1_1' is not a real number.
Quitting (on error).
